[tool.poetry]
name = "integration-blueprint"
version = "0.1.0"
description = ""
authors = ["Jon Connell <python@figsandfudge.com>"]
readme = "README.md"
packages = [{include = "integration_blueprint"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
homeassistant = "2022.12.0"
pytest-asyncio = "0.20.2"


[tool.poetry.group.test.dependencies]
pytest-homeassistant-custom-component = "0.12.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
minversion = 6.0
testpaths = ["tests"]
